# agentic-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
changes/: unreleased.md
docs/plans/: 2026-03-12-dual-thinking-boxes-design.md  2026-03-12-dual-thinking-boxes-plan.md
examples/: arxiv_demo.py  fileops_demo.py  hello_agent.py  hello_langgraph.py  jobs_demo.py  memory_demo.py  planning_demo.py  shell_demo.py  webfetch_demo.py  websearch_demo.py
examples/hello_agent/: __init__.py  __main__.py  app.py
examples/research_demo/: README.md  __init__.py  __main__.py  agents.py  app.py  (+3 more)
tests/: __init__.py  conftest.py  event_replay.py  test_adk_event_processor.py  test_adk_plugins.py  test_arxiv_download_security.py  test_arxiv_tools.py  test_bm25_index.py  test_commands.py  test_concept_store.py  test_concurrent_stores.py  test_config.py  test_context_trimming.py  test_context_window.py  test_dual_thinking_boxes.py  test_embeddings.py  test_executor_security.py  test_file_utils_atomic.py  test_grep_tool_cache.py  test_grep_tool_security.py  test_hitl.py  test_input_callback.py  test_kb_concepts.py  test_kb_helpers.py  test_kb_index_md.py  test_kb_ingest_log.py  test_kb_sidecar.py  test_kb_tool_renames.py  test_knowledge_base.py  test_knowledge_tools.py  test_langgraph.py  test_langgraph_confirmation.py  test_memory.py  test_memory_thread_safety.py  test_message_processor_cancel.py  test_message_processor_render.py  test_model_registry.py  test_paper_tools.py  test_persistence.py  test_planning.py  (+16 more)
(+231 files in other folders)
