[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-cli"
version = "0.1.0"
description = "A framework for building domain-specific agentic CLI applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Andrey Shiryaev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "thinking-prompt>=0.1.0",
    "google-adk[genai]>=0.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/shoom1/agentic-cli"
Repository = "https://github.com/shoom1/agentic-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py312"
